--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,12 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  </head>
+    <script
+      src="https://kit.fontawesome.com/7759ce9e4c.js"
+      crossorigin="anonymous"
+    ></script>
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
+</head>
   <body>
     <app-root></app-root>
     <script
